# telomere-mental-health

./: exploratory_data_analysis.ipynb  main.py  pyproject.toml  testing_grounds.ipynb
XGBoost/: xgboost_machine_learning.ipynb  xgboost_optuna.py
XGBoost/hamd/: notes.txt  xgboost_machine_learning.ipynb
XGBoost/phq9/: xgboost_machine_learning.ipynb
data/: Cleaned MDD Master v52225.xlsx  Telomere MDD.xlsx  hamd_data.csv  phq9_data.csv  preprocessing.ipynb  ~$Telomere MDD.xlsx
exploratory_data_analysis/: exploratory_data_analysis.ipynb
logistic_regression/: logistic_regression_inferential_statistics.ipynb
