[project]
name = "telomere-mental-health"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.29.5",
    "ipympl>=0.9.7",
    "ipywidgets>=8.1.7",
    "matplotlib>=3.10.3",
    "openpyxl>=3.1.5",
    "pingouin>=0.5.5",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "statannotations>=0.7.2",
]
